--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
