--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
+    "dexie": "^3.2.3",
+    "dexie-react-hooks": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,7 +25,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.2",
     "vite": "^4.2.0"
   }
 }
