--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "prettier": "^2.8.4",
     "typescript": "^5.0.2",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-pwa": "^0.14.4"
   }
 }
