--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "dexie": "^3.2.3",
+    "dexie-export-import": "^4.0.7",
     "dexie-react-hooks": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
