--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dexie-export-import": "^4.0.7",
     "dexie-react-hooks": "^1.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
